# misaka

./: .gitignore
chess/kuroko/: attack.odin  kuroko  main.odin
chess/kuroko/tests/: pawn_test.odin  tests
compiler/: compiler  lexer.odin  token.odin  token_test.odin
compiler/sylph-rs/: Cargo.toml
compiler/sylph-rs/src/: lexer.rs  main.rs
game-engine/esper/: game.cpp  game.h  main.cpp  texturemanager.cpp  texturemanager.h
game-engine/uksterm/: Makefile  README.md  term.c  tty.odin
game-engine/uksterm/ffi/: termios.odin
reverse-engineer/: main  main.odin  reverse-engineer
reverse-engineer/crawler/: Cargo.toml
reverse-engineer/crawler/src/: crawler.rs  main.rs
reverse-engineer/crawler/src/spiders/: mod.rs
reverse-engineer/disassembly/: ass  ass.c  main  main.odin
reverse-engineer/sha1/: README.md  main.odin
reverse-engineer/sha1-cracker/: .gitignore
reverse-engineer/sha1/sha1-cracker/: Cargo.toml
reverse-engineer/sha1/sha1-cracker/src/: main.rs
reverse-engineer/sha1/sha1-odin/: sha1  sha1.odin
