[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "3.1", features = ["cargo"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"

